--- a/lesson01-setup-environment/pom.xml
+++ b/lesson01-setup-environment/pom.xml
@@ -8,7 +8,7 @@
   <artifactId>lesson01-sett</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>lesson01-sett</name>
+  <name>lesson01-setup-environment</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
